other/mitigate-log4shell/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: busybox:1.35
