other/mitigate-log4shell/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: log4shell-mitigation
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
